# callable-pip

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
callable_pip/: __init__.py
