[build-system]
requires = ["flit-core"]
build-backend = "flit_core.buildapi"

[project]
name='callable-pip'
version='1.0.0'
authors = [
    { name = "Stephen Rosen", email = "sirosen0@gmail.com" },
]
description = "callable-pip patches 'pip' to add 'pip.main()'"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

license = { file = "LICENSE" }
readme = { file = "README.rst", content-type = "text/x-rst" }

[project.urls]
Homepage = "https://github.com/sirosen/callable-pip"
