[build-system]
requires = ["flit-core"]
build-backend = "flit_core.buildapi"

[project]
name='callable-pip'
version='2.0.0'
authors = [
    { name = "Stephen Rosen", email = "sirosen0@gmail.com" },
]
description = "callable-pip patches 'pip' to add 'pip.main()'"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

license = { file = "LICENSE" }
readme = { file = "README.rst", content-type = "text/x-rst" }

[project.urls]
Homepage = "https://github.com/sirosen/callable-pip"
